unpackaged/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__TextColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextColor__c</fullName>
    <description>Default color (in HEX) applied to text rendered by this content.</description>
    <inlineHelpText>Couleur par défaut (en valeur hexadécimale) appliquée au texte rendu dans ce contenu.</inlineHelpText>
    <label>Text Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>